# rag-bot

./: .env.template  .pre-commit-config.yaml  Makefile  README.md  config.yaml  gen-requirements-txt.sh  install-req.sh  pyproject.toml  requirements.txt  sample_response.md
.github/workflows/: code-checks.yaml
src/: chat_client.py  chat_console.py  config.py  document_retriever.py  main.py  model.py  question_answer.py  question_answer_request.py  utils.py
src/adapter/: __init__.py  llm.py  retriever.py
src/application/: __init__.py  document_retriever.py  question_answer.py  retriever.py
src/common/: file_utils.py  llm_utils.py  loaders.py  utils.py  vector_utils.py
src/domain/: model.py
src/entrypoints/: main.py  middleware.py  router.py
src/entrypoints/document_retriever/: router.py
src/entrypoints/question_answer/: router.py
src/entrypoints/router/v1/: router.py
src/manager/: __init__.py  chat_manager.py  graph_manager.py  memory_manager.py
src/retriever/: chromadb_retriever.py  document_retriever.py  faiss_retriever.py  retriever.py
src/wrapper/: model_wrapper.py  rag_wrapper.py
