[tool.poetry]
name = "ragbot"
version = "0.1.0"
description = "genai example"
authors = ["michael.toledo <michael.toledo@synpulse.com>"]
readme = "README.md"

packages = [
    {"include"="application", from="src"},
    {"include"="common", from="src"},
    {"include"="domain", from="src"},
    {"include"="entrypoints", from="src"},
    {"include"="*.py", from="src"},
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "2.6.1"
pydantic = "2.10.3"
python-dotenv = "1.0.1"
fastapi = "0.115.6"
starlette = "0.41.3"
langchain = "0.3.9"
langchain-community = "0.3.9"
langchain-core = "0.3.21"
langchain-huggingface = "0.1.2"
langchain-openapi = "^0.1.1"
langchain-chroma = "0.1.4"
langchain-openai = "0.2.11"
uvicorn = "0.32.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^23.3.0"
ruff = "^0.8.1"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | docs
  | .venv
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]
exclude = ["tests/", ".venv/", "docs/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
